ecmascript/parser/tests/typescript-errors/type-only-specifier/invalid-type-only-local-with-imported/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/type-only-specifier/invalid-type-only-local-with-imported/input.ts:1:21
  |
1 | import { type as as export } from 'mod'
  |                     ^^^^^^

